src/main/java/org/example/error/Severity.java
package org.example.error;

public enum Severity {
    INFO,
    WARN,
    EXCEPTION,
    ERROR
}
